# maya

./: .env.example  .gitignore  Dockerfile  README.md  WEBHOOK_FASTAPI.md  app.py  audio.py  configurar_webhook.py  corrigir_webhook_url.py  docker-compose.yml  enquete.py  iniciar_maya.bat  inspect_supabase_schema.py  main.py  maya_hopecann.py  maya_prompt_completo.md  mcp.json  parar_maya.bat  process_image.py  pyproject.toml  railway.toml  reconectar_whatsapp.bat  requirements.txt  setup_evolution_bot.py  setup_google_auth.py  setup_supabase_tables.py  status_maya.bat  supabase_schema.sql  texto.py  webhook_agno.py  webhook_flask.py  webhook_ia_integrada.py  webhook_simple.py
agents/agent_image/agent_image/: __init__.py
agents/agent_whatsapp/: pyproject.toml
agents/agent_whatsapp/agent_whatsapp/: ai_whatsapp_agent.py  whatsapp_agent.py
agents/agno_core/: pyproject.toml
agents/agno_core/agno_core/: interfaces.py  orchestrator.py
config/: docker-compose.yml  render.yaml
docs/: DEPLOY_RAILWAY.md  EVOLUTION_API_CONFIG.md  GUIA_MAYA_HOPECANN.md  README_DEPLOY.md  README_SCRIPTS.md
evolution_client/: __init__.py  config.py  simple_client.py
scripts/: create_missing_tables.py  create_structure.py  deploy-railway.ps1  deploy-railway.sh  setup_evolution_bot.py
src/: __init__.py  config.py  main.py
src/agents/agent_image/: pyproject.toml
src/agents/agent_poll/: pyproject.toml
src/agents/agent_poll/agent_poll/: __init__.py  poll_agent.py
src/agents/agent_whatsapp/agent_whatsapp/: __init__.py
src/agents/agno_core/agno_core/: __init__.py
src/core/: __init__.py  contact_memory.py  maya_hopecann.py  maya_optimized.py
src/integrations/: __init__.py
src/integrations/evolution_client/: client.py  config.py
src/integrations/webhook_server/: main.py
src/integrations/webhook_server/adapters/: evolution_adapter.py
src/integrations/webhook_server/schemas/: webhook_schemas.py
src/utils/: __init__.py  imagem.py  process_audio.py  whatsapp_media_decrypt.py
whatsapp-agent/: AGNO_INTEGRATION.md  app.py  debug_webhook.py  fix_webhook.py  integrar_meu_agno.py  maya_whatsapp.py  maya_whatsapp_demo.py  maya_whatsapp_funcional.py  maya_whatsapp_simple.py  memory_manager.py  quick_start.py
whatsapp-agent/core/: __init__.py  agno_integration.py  message_handler.py  response_generator.py  whatsapp_client.py
whatsapp-agent/examples/: agno_whatsapp_bot.py  custom_responses.py  send_message.py
