[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maya-hopecann"
version = "1.0.0"
description = "Maya AI Assistant with WhatsApp integration and advanced conversational capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DevEclipsy", email = "deveclipsy007@gmail.com"}
]
maintainers = [
    {name = "DevEclipsy", email = "deveclipsy007@gmail.com"}
]
keywords = ["ai", "whatsapp", "chatbot", "assistant", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    # Web Framework
    "flask==2.2.3",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "werkzeug==2.2.3",
    "gunicorn==21.2.0",
    
    # AI e Machine Learning
    "openai==1.3.0",
    "assemblyai==0.17.0",
    
    # Processamento de Áudio
    "pydub==0.25.1",
    
    # Banco de Dados
    "supabase==2.0.0",
    
    # Google APIs
    "google-auth==2.23.0",
    "google-auth-oauthlib==1.0.0",
    "google-auth-httplib2==0.1.1",
    "googleapis-common-protos==1.60.0",
    "google-api-python-client==2.100.0",
    
    # Criptografia
    "pycryptodome==3.19.0",
    
    # Utilitários
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "psutil==5.9.5",
    
    # Logging e Debugging
    "coloredlogs==15.0.1",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/deveclipsy007/maya"
Repository = "https://github.com/deveclipsy007/maya.git"
Documentation = "https://github.com/deveclipsy007/maya/blob/main/README.md"
"Bug Tracker" = "https://github.com/deveclipsy007/maya/issues"

[project.scripts]
maya = "src.main:main"
maya-start = "src.main:start_server"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
